avances 6